@@ -48,8 +48,8 @@ public class LinkedFilesIndexerTest {
     @Test
     void exampleThesisIndex() throws IOException {
         // given
-        BibEntry entry = new BibEntry(StandardEntryType.PhdThesis);
-        entry.setFiles(Collections.singletonList(new LinkedFile("Example Thesis", "thesis-example.pdf", StandardFileType.PDF.getName())));
+        BibEntry entry = new BibEntry(StandardEntryType.PhdThesis)
+                .withFiles(List.of(new LinkedFile("Example Thesis", "thesis-example.pdf", StandardFileType.PDF.getName())));
 
         // when
         indexer.addToIndex(List.of(entry), mock(BackgroundTask.class));
@@ -64,8 +64,8 @@ public class LinkedFilesIndexerTest {
     @Test
     void dontIndexNonPdf() throws IOException {
         // given
-        BibEntry entry = new BibEntry(StandardEntryType.PhdThesis);
-        entry.setFiles(Collections.singletonList(new LinkedFile("Example Thesis", "thesis-example.pdf", StandardFileType.AUX.getName())));
+        BibEntry entry = new BibEntry(StandardEntryType.PhdThesis)
+                .withFiles(List.of(new LinkedFile("Example Thesis", "thesis-example.pdf", StandardFileType.AUX.getName())));
 
         // when
         indexer.addToIndex(List.of(entry), mock(BackgroundTask.class));
@@ -80,8 +80,8 @@ public class LinkedFilesIndexerTest {
     @Test
     void dontIndexOnlineLinks() throws IOException {
         // given
-        BibEntry entry = new BibEntry(StandardEntryType.PhdThesis);
-        entry.setFiles(Collections.singletonList(new LinkedFile("Example Thesis", "https://raw.githubusercontent.com/JabRef/jabref/main/src/test/resources/pdfs/thesis-example.pdf", StandardFileType.PDF.getName())));
+        BibEntry entry = new BibEntry(StandardEntryType.PhdThesis)
+                .withFiles(List.of(new LinkedFile("Example Thesis", "https://raw.githubusercontent.com/JabRef/jabref/main/src/test/resources/pdfs/thesis-example.pdf", StandardFileType.PDF.getName())));
 
         // when
         indexer.addToIndex(List.of(entry), mock(BackgroundTask.class));
@@ -96,9 +96,9 @@ public class LinkedFilesIndexerTest {
     @Test
     void exampleThesisIndexWithKey() throws IOException {
         // given
-        BibEntry entry = new BibEntry(StandardEntryType.PhdThesis);
-        entry.setCitationKey("Example2017");
-        entry.setFiles(Collections.singletonList(new LinkedFile("Example Thesis", "thesis-example.pdf", StandardFileType.PDF.getName())));
+        BibEntry entry = new BibEntry(StandardEntryType.PhdThesis)
+                .withCitationKey("Example2017")
+                .withFiles(List.of(new LinkedFile("Example Thesis", "thesis-example.pdf", StandardFileType.PDF.getName())));
 
         // when
         indexer.addToIndex(List.of(entry), mock(BackgroundTask.class));
@@ -113,8 +113,8 @@ public class LinkedFilesIndexerTest {
     @Test
     void metaDataIndex() throws IOException {
         // given
-        BibEntry entry = new BibEntry(StandardEntryType.Article);
-        entry.setFiles(Collections.singletonList(new LinkedFile("Example Thesis", "metaData.pdf", StandardFileType.PDF.getName())));
+        BibEntry entry = new BibEntry(StandardEntryType.Article)
+                .withFiles(List.of(new LinkedFile("Example Thesis", "metaData.pdf", StandardFileType.PDF.getName())));
 
         // when
         indexer.addToIndex(List.of(entry), mock(BackgroundTask.class));
@@ -129,9 +129,9 @@ public class LinkedFilesIndexerTest {
     @Test
     void exampleThesisIndexAppendMetaData() throws IOException {
         // given
-        BibEntry exampleThesis = new BibEntry(StandardEntryType.PhdThesis);
-        exampleThesis.setCitationKey("ExampleThesis2017");
-        exampleThesis.setFiles(Collections.singletonList(new LinkedFile("Example Thesis", "thesis-example.pdf", StandardFileType.PDF.getName())));
+        BibEntry exampleThesis = new BibEntry(StandardEntryType.PhdThesis)
+                .withCitationKey("ExampleThesis2017")
+                .withFiles(List.of(new LinkedFile("Example Thesis", "thesis-example.pdf", StandardFileType.PDF.getName())));
 
         // when
         indexer.addToIndex(List.of(exampleThesis), mock(BackgroundTask.class));
@@ -142,9 +142,9 @@ public class LinkedFilesIndexerTest {
             assertEquals(33, reader.numDocs());
         }
 
-        BibEntry metadata = new BibEntry(StandardEntryType.Article);
-        metadata.setCitationKey("MetaData2017");
-        metadata.setFiles(Collections.singletonList(new LinkedFile("Metadata file", "metaData.pdf", StandardFileType.PDF.getName())));
+        BibEntry metadata = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("MetaData2017")
+                .withFiles(List.of(new LinkedFile("Metadata file", "metaData.pdf", StandardFileType.PDF.getName())));
 
         // when
         indexer.addToIndex(List.of(metadata), mock(BackgroundTask.class));
@@ -159,9 +159,9 @@ public class LinkedFilesIndexerTest {
     @Test
     public void flushIndex() throws IOException {
         // given
-        BibEntry entry = new BibEntry(StandardEntryType.PhdThesis);
-        entry.setCitationKey("Example2017");
-        entry.setFiles(Collections.singletonList(new LinkedFile("Example Thesis", "thesis-example.pdf", StandardFileType.PDF.getName())));
+        BibEntry entry = new BibEntry(StandardEntryType.PhdThesis)
+                .withCitationKey("Example2017")
+                .withFiles(List.of(new LinkedFile("Example Thesis", "thesis-example.pdf", StandardFileType.PDF.getName())));
 
         indexer.addToIndex(List.of(entry), mock(BackgroundTask.class));
 
